fix dropdown invisible

--- a/src/app/user/clinicinfo/medication/medication.component.scss
+++ b/src/app/user/clinicinfo/medication/medication.component.scss
@@ -11,3 +11,8 @@
   bottom: 10px;
   font-weight: bold;
 }*/
+
+
+.dropup, .dropright, .dropdown, .dropleft {
+  position: static;
+}
